...

                        }
                    }
                    Divider()
                }
                Button(role: .destructive, action: deleteProduct) {
                    Label("Delete", systemImage: "trash.fill")
                }
            } label: {
                Label("Move to", systemImage: "ellipsis.circle")
                    .font(.system(size: 48))
                    .foregroundColor(.accentColor)
                    .labelStyle(.iconOnly)
            }
        }
    }
...
