/* No comment provided by engineer. */
"Add to basket" = "Add to basket";

/* No comment provided by engineer. */
"Can't find any product with this name." = "Can't find any product with this name.";

/* No comment provided by engineer. */
"Choose a favourite list to start" = "Choose a favourite list to start";

/* No comment provided by engineer. */
"OR" = "OR";

/* No comment provided by engineer. */
"Search Products Here" = "Search Products Here";

/* No comment provided by engineer. */
"Start searching products" = "Start searching products";

