/* No comment provided by engineer. */
"!" = "!";

/* No comment provided by engineer. */
"Add to cart" = "Add to cart";

/* No comment provided by engineer. */
"Hello, World!" = "Hello, World!";

/* No comment provided by engineer. */
"No products found in market" = "No products found in market";

/* No comment provided by engineer. */
"Not in a market. Please go to a market of your list and try again" = "Not in a market. Please go to a market of your list and try again";

/* No comment provided by engineer. */
"Open iOS App for searching nearby markets, please" = "Open iOS App for searching nearby markets, please";

/* No comment provided by engineer. */
"Quantity: %d" = "Quantity: %d";

/* No comment provided by engineer. */
"Remove from cart" = "Remove from cart";

