...
                ToolbarItem(placement: .primaryAction) {
                    Button(action: {
                        withAnimation {
                            isShowingInMarket.toggle()
                        }
                    }) {
                        Label("Shop", systemImage: "cart")
                            .labelStyle(.iconOnly)
                    }
                }
                ToolbarItem(placement: .destructiveAction) {
                    Button(action: { dismiss() }) {
                        Label("Close", systemImage: "xmark")
...
